--- a/address-book/src/components/SimpleModal/SimpleModal.scss
+++ b/address-book/src/components/SimpleModal/SimpleModal.scss
@@ -6,13 +6,13 @@
   width:100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.6);
-}
 
-.modal__main {
-  position:fixed;
-  background: white;
-  height: auto;
-  top:50%;
-  left:50%;
-  transform: translate(-50%,-50%);
+  &__main {
+    position:fixed;
+    background: white;
+    height: auto;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+  }
 }
