--- a/address-book/src/components/Header/Header.scss
+++ b/address-book/src/components/Header/Header.scss
@@ -3,4 +3,5 @@
   top: 0; /* Position the navbar at the bottom of the page */
   width: 100%; /* Full width */
   height: 50px;
+  background: white;
 }
