Add buttons and enhance modal

--- a/address-book/src/components/SimpleModal/SimpleModal.scss
+++ b/address-book/src/components/SimpleModal/SimpleModal.scss
@@ -15,4 +15,10 @@
     left:50%;
     transform: translate(-50%,-50%);
   }
+
+  &__actions {
+    display: flex;
+    justify-content: flex-end;
+    padding: 10px;
+  }
 }
