--- a/address-book/src/components/Header/Header.scss
+++ b/address-book/src/components/Header/Header.scss
@@ -4,4 +4,10 @@
   width: 100%; /* Full width */
   height: 50px;
   background: white;
+  display: flex;
+  align-items: center;
+
+  &__user-search {
+    flex-grow: 1;
+  }
 }
