--- a/address-book/src/components/Button/Button.scss
+++ b/address-book/src/components/Button/Button.scss
@@ -1,8 +1,8 @@
 @import '../../global';
 
 .button {
-  font-size: 20px;
-  padding: 10px;
+  margin: 0 5px;
+  padding: 5px;
   text-align: center;
   color: $color-white;
   min-width: 100px;
