--- a/address-book/src/components/UserList/UserListItem/UserListItem.scss
+++ b/address-book/src/components/UserList/UserListItem/UserListItem.scss
@@ -2,17 +2,22 @@
   display: flex;
   align-items: center;
   cursor: pointer;
-  
-  &__thumbnail {
+
+  &__image {
+    display: flex;
+    flex: 1 0 80px;
+    justify-content: center;
+  }
+
+  &__image-thumbnail {
     border-radius: 50%;
-    height: 80px;
-    width: 80px;
-    margin: 10px
+    width: 70px;
+    object-fit: cover;
   }
 
   &__user-information{
-    flex: 1 0 1;
-    margin: 10px;
+    flex-wrap: nowrap;
+    padding: 10px;
   }
   &__full-name, &__user-name, &__email {
     margin: 0;
