--- a/address-book/src/components/UserList/UserListItem/UserListItem.scss
+++ b/address-book/src/components/UserList/UserListItem/UserListItem.scss
@@ -5,8 +5,8 @@
 
   &__image {
     display: flex;
-    flex: 1 0 80px;
     justify-content: center;
+    padding: 5px;
   }
 
   &__image-thumbnail {
