--- a/address-book/src/components/Header/Header.scss
+++ b/address-book/src/components/Header/Header.scss
@@ -6,6 +6,7 @@
   background: white;
   display: flex;
   align-items: center;
+  justify-content: flex-end;
 
   &__user-search {
     flex-grow: 1;
