--- a/address-book/src/components/UserSearch/UserSearch.scss
+++ b/address-book/src/components/UserSearch/UserSearch.scss
@@ -1,7 +1,11 @@
 .user-search {
+  display: flex;
+  justify-content: center;
+
   label {
     margin: 0 5px;
   }
+  
   input {
     margin: 0 5px;
   }
