--- a/address-book/src/components/UserList/UserList.scss
+++ b/address-book/src/components/UserList/UserList.scss
@@ -13,6 +13,7 @@
   &__loading-message {
     display: flex;
     align-items: center;
+    padding: 15px;
 
     span {
       font-weight: bold;
@@ -22,12 +23,12 @@
 
   &__failed-message {
     font-weight: bold;
-    margin-left: 10px;
     color: red;
+    padding: 15px;
   }
 
   &__end-of-user-catalog-message {
     font-weight: bold;
-    margin-left: 10px;
+    padding: 15px;
   }
 }
